--- a/debian/control
+++ b/debian/control
@@ -4,6 +4,7 @@ Priority: optional
 Maintainer: Debian Games Team <pkg-games-devel@lists.alioth.debian.org>
 Uploaders: Carlos Donizete Froes <coringao@riseup.net>
 Build-Depends: debhelper (>=10)
+XS-Autobuild: yes
 Standards-Version: 4.1.1
 Homepage: https://github.com/coringao/runescape/wiki
 Vcs-Git: https://anonscm.debian.org/git/pkg-games/runescape.git
