--- a/debian/control
+++ b/debian/control
@@ -3,12 +3,12 @@ Section: non-free/games
 Priority: optional
 Maintainer: Debian Games Team <pkg-games-devel@lists.alioth.debian.org>
 Uploaders: Carlos Donizete Froes <coringao@riseup.net>
-Build-Depends: debhelper (>=10)
+Build-Depends: debhelper (>=11)
+Standards-Version: 4.1.3
 XS-Autobuild: yes
-Standards-Version: 4.1.1
 Homepage: https://github.com/coringao/runescape/wiki
-Vcs-Git: https://anonscm.debian.org/git/pkg-games/runescape.git
-Vcs-Browser: https://anonscm.debian.org/cgit/pkg-games/runescape.git
+Vcs-Git: https://salsa.debian.org/debiangames-team/runescape.git
+Vcs-Browser: https://salsa.debian.org/debiangames-team/runescape
 
 Package: runescape
 Architecture: all
