--- a/debian/control
+++ b/debian/control
@@ -4,11 +4,10 @@ Priority: optional
 Maintainer: Debian Games Team <pkg-games-devel@lists.alioth.debian.org>
 Uploaders: Carlos Donizete Froes <coringao@riseup.net>
 Build-Depends: debhelper (>=11)
-Standards-Version: 4.1.3
-XS-Autobuild: yes
-Homepage: https://github.com/coringao/runescape/wiki
-Vcs-Git: https://salsa.debian.org/debiangames-team/runescape.git
-Vcs-Browser: https://salsa.debian.org/debiangames-team/runescape
+Standards-Version: 4.1.4
+Homepage: https://gitlab.com/coringao/runescape/wikis
+Vcs-Git: https://salsa.debian.org/games-team/runescape.git
+Vcs-Browser: https://salsa.debian.org/games-team/runescape
 
 Package: runescape
 Architecture: all
