Replaced by the official game name

--- a/src/runescape.desktop
+++ b/src/runescape.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
-Name=Runescape
+Name=Old School RuneScape
 Comment=Multiplayer online game set in a fantasy world
 Exec=runescape
 Keywords=game;adventure;MMORPG;multiplayer;online;
